@@ -1,3 +1,9 @@
+2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/extensions.php
+	 godmode/extensions.php: Fixed bug that make dissapear extensions 
+	 without fatherId in menu.
+
 2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/functions_modules.php,
